# bluback

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile  ripblu.py
.github/workflows/: ci.yml  macos.yml  release.yml
docs/: ROADMAP-1.0-original.md  ROADMAP-1.0.md  cli-reference.md  configuration.md  features.md  keybindings.md  macos-installation.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-03-13-ripblu-polish.md  2026-03-13-rust-rewrite.md  2026-03-14-auto-eject.md  2026-03-14-configurable-filename-structure.md  2026-03-15-manual-episode-mapping.md  2026-03-16-settings-panel.md  2026-03-20-chapter-preservation.md  2026-03-22-ci-builds.md  2026-03-22-settings-panel.md  2026-03-22-tui-refactor.md  2026-03-23-ffmpeg-bindings.md  2026-03-24-headless-cli.md  2026-03-24-v0.6-stability-safety.md  2026-03-25-v0.7-cli-features.md  2026-03-25-v0.7-workflow-extraction.md  2026-03-27-macos-support.md  2026-03-27-multi-drive-support.md  2026-03-28-ci-multi-platform.md  2026-03-28-log-file-support.md  2026-03-28-mkv-metadata-embedding.md  2026-03-28-post-rip-hooks.md  2026-03-29-batch-mode.md  2026-03-29-per-stream-track-selection.md  2026-03-29-rip-verification.md  2026-04-03-auto-detection.md  2026-04-03-probe-caching.md  2026-04-13-history.md  (+12 more)
src/: aacs.rs  chapters.rs  check.rs  cli.rs  config.rs  detection.rs  disc.rs  drive_monitor.rs  duration.rs  generate.rs  history.rs  history_cli.rs  hooks.rs  index.rs  logging.rs  main.rs  rip.rs  session.rs  streams.rs  tmdb.rs  types.rs  util.rs  verify.rs  workflow.rs
src/media/: error.rs  mod.rs  probe.rs  remux.rs
src/tui/: coordinator.rs  dashboard.rs  history.rs  mod.rs  settings.rs  tab_bar.rs  wizard.rs
tests/: cli_batch_conflicts.rs  folder_input.rs  generate_disc_fixture.sh  generate_fixtures.sh  generate_test.rs  history_integration.rs  metadata_test.rs  test_ripblu.py  tmdb_parsing.rs
(+55 files in other folders)
