[package]
name = "bluback"
version = "0.1.0"
edition = "2021"
description = "Blu-ray backup tool with TUI"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cebarks/bluback"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.7"
ureq = { version = "3", features = ["json"] }
which = "8"
