[package]
name = "bluback"
version = "0.10.2"
edition = "2021"
description = "Blu-ray backup tool with TUI"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cebarks/bluback"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mpls = "0.2"
toml = "1.1"
ureq = { version = "3", features = ["json"] }
ffmpeg-the-third = "4"
libc = "0.2"
ctrlc = "3"
log = "0.4"
fern = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[lints.rust]
# ff_api_avstream_side_data is emitted by ffmpeg-sys-the-third's build script
# when FFmpeg < 7.0 still has the deprecated AVStream.side_data fields.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("ff_api_avstream_side_data"))'] }

[dev-dependencies]
tempfile = "3"
